Fix contrast problem

--- a/style.css
+++ b/style.css
@@ -773,9 +773,6 @@ h4 {
     margin-top: 24px;
 }
 
-.white {
-    color: #FFFFFF!important;
-}
 
 .portfolio-thumb {
     margin-bottom: 24px;
